--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "server": "node server.js",
     "client": "vite",
     "build": "vite build",
+    "vercel-build": "vite build",
     "start": "node server.js",
     "lint": "eslint .",
     "preview": "vite preview"
