--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,10 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "maxDuration": 300
+      }
     },
     {
       "src": "package.json",
@@ -23,11 +26,6 @@
       "dest": "/dist/$1"
     }
   ],
-  "functions": {
-    "server.js": {
-      "maxDuration": 300
-    }
-  },
   "env": {
     "NODE_ENV": "production"
   }
